@@ -1,3 +1,8 @@
+2004-03-29  ujwal
+
+	* Fixed bugs in retrieving default and blobal profile names from 
+	  the profile managers.
+
 2004-03-28  ujwal
 
 	* Added Rendezvous support.
